<resources>
    <string name="app_name">CampusCollab</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>
    <string name="second_fragment_label">Login</string>
    <string name="getStarted">Get Started</string>
    <string name="chooseRole">Choose a Role</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome</string>
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="action_sign_in_short" />
    <string name="action_sign_in" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo">TODO</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="default_web_client_id">AIzaSyB0MtmbfPYaIUdw8jU4XJxKGkOdtV-6cpU</string>
    <string name="server_client_id">AIzaSyB0MtmbfPYaIUdw8jU4XJxKGkOdtV-6cpU</string>
    <string name="company_logo">Your Logo Text</string>
</resources>